--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,8 +15,7 @@
 /* line 22, ../sass/_default.scss */
 .main .content .contentNav {
   height: 100%;
-  width: 30%;
-  border-right: 1px solid;
+  width: 35%;
   color: gray;
   padding-right: 10px;
   display: flex;
@@ -27,7 +26,26 @@
   overflow: auto;
   height: 89%;
 }
-/* line 40, ../sass/_default.scss */
+/* line 39, ../sass/_default.scss */
+.main .content .contentNav .contentNavNav .element {
+  cursor: pointer;
+  text-align: left;
+  -moz-transition: all 0.2s ease-in;
+  -o-transition: all 0.2s ease-in;
+  -webkit-transition: all 0.2s ease-in;
+  transition: all 0.2s ease-in;
+  padding-left: 15px;
+}
+/* line 50, ../sass/_default.scss */
+.main .content .contentNav .contentNavNav .element:hover {
+  background-color: #9a9a9a;
+  color: white;
+  -moz-transform: translateX(5px);
+  -ms-transform: translateX(5px);
+  -webkit-transform: translateX(5px);
+  transform: translateX(5px);
+}
+/* line 64, ../sass/_default.scss */
 .main .content .contentNav .btn-back {
   height: 7%;
   position: absolute;
@@ -36,10 +54,30 @@
   left: 0;
   width: 98%;
 }
-/* line 52, ../sass/_default.scss */
+/* line 76, ../sass/_default.scss */
 .main .content .contentOutput {
-  overflow-y: auto;
+  overflow-x: hidden !important;
   height: 100%;
-  width: 70%;
+  width: 65%;
   text-wrap: normal;
+}
+/* line 88, ../sass/_default.scss */
+.main .content .contentNavLoader {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #f3f3f3;
+  border-radius: 4px;
+  opacity: 0.6;
+  z-index: 20;
+  color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -moz-transition: background 0.3s;
+  -o-transition: background 0.3s;
+  -webkit-transition: background 0.3s;
+  transition: background 0.3s;
 }
