--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,4 +1,9 @@
 /* line 3, ../sass/_default.scss */
+.main .logoIimg {
+  width: 100px;
+  height: 50px;
+}
+/* line 10, ../sass/_default.scss */
 .main .content {
   position: absolute;
   bottom: 0;
@@ -12,7 +17,7 @@
   flex-direction: row;
   padding: 10px;
 }
-/* line 22, ../sass/_default.scss */
+/* line 28, ../sass/_default.scss */
 .main .content .contentNav {
   height: 100%;
   width: 35%;
@@ -21,12 +26,12 @@
   display: flex;
   flex-direction: column;
 }
-/* line 35, ../sass/_default.scss */
+/* line 40, ../sass/_default.scss */
 .main .content .contentNav .contentNavNav {
   overflow: auto;
   height: 89%;
 }
-/* line 39, ../sass/_default.scss */
+/* line 44, ../sass/_default.scss */
 .main .content .contentNav .contentNavNav .element {
   cursor: pointer;
   text-align: left;
@@ -36,7 +41,7 @@
   transition: all 0.2s ease-in;
   padding-left: 15px;
 }
-/* line 50, ../sass/_default.scss */
+/* line 54, ../sass/_default.scss */
 .main .content .contentNav .contentNavNav .element:hover {
   background-color: #9a9a9a;
   color: white;
@@ -45,7 +50,7 @@
   -webkit-transform: translateX(5px);
   transform: translateX(5px);
 }
-/* line 64, ../sass/_default.scss */
+/* line 68, ../sass/_default.scss */
 .main .content .contentNav .btn-back {
   height: 7%;
   position: absolute;
@@ -54,14 +59,28 @@
   left: 0;
   width: 98%;
 }
-/* line 76, ../sass/_default.scss */
+/* line 80, ../sass/_default.scss */
 .main .content .contentOutput {
   overflow-x: hidden !important;
   height: 100%;
   width: 65%;
   text-wrap: normal;
 }
-/* line 88, ../sass/_default.scss */
+/* line 90, ../sass/_default.scss */
+.main .content .contentOutput .nothingToShow {
+  height: 100%;
+  background: #e6e6e6;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+/* line 101, ../sass/_default.scss */
+.main .content .contentOutput .nothingToShow span {
+  display: block;
+  font-size: 20pt;
+}
+/* line 109, ../sass/_default.scss */
 .main .content .contentNavLoader {
   position: absolute;
   top: 0;
@@ -80,4 +99,27 @@
   -o-transition: background 0.3s;
   -webkit-transition: background 0.3s;
   transition: background 0.3s;
+}
+/* line 136, ../sass/_default.scss */
+.main .content .debugTools {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #f3f3f3;
+  -moz-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
+}
+/* line 145, ../sass/_default.scss */
+.main .content .debugTools:hover {
+  background-color: gray;
+}
+/* line 148, ../sass/_default.scss */
+.main .content .debugTools:hover > a.btn {
+  color: white;
+}
+/* line 155, ../sass/_default.scss */
+.main .content .debugTools > a.btn {
+  color: black;
 }
