fix the issue on the display of the page of the markdown files

--- a/mdR/partials/main.html
+++ b/mdR/partials/main.html
@@ -108,11 +108,11 @@
 
                     <div ng-show="contentType != 'md'" hljs hljs-source="viewcontent"></div>
 
-                    <div ng-show="contentType == 'md'">
+                    <pre ng-show="contentType == 'md'">
 
-                    <div ng-bind-html="viewcontent"></div>
+                    <code ng-bind-html="viewcontent"></code>
 
-                    </div>
+                    </pre>
 
                 </span>
 
