end of integration of angular 4 && creation of NavComponent

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,6 @@
 <div class="main">
 
-  <nav class="navbar navbar-light bg-faded fixed-top justify-content-between">
-
-    <a class="navbar-brand col-2">
-
-      <img src="assets/svg/mdr.svg" class="logoIimg" alt="">
-
-    </a>
-
-    <form class="form-inline col-8" novalidate (submit)="goToPath(path.value)">
-
-      <div class="col-10">
-
-        <input class="form-control w-100" [value]="currentFolder" type="text" placeholder="Enter a path">
-
-      </div>
-
-      <button class="btn  btn-outline-secondary col-md-2" type="submit">Go</button>
-
-    </form>
-
-  </nav>
+    <app-nav [currentFolder]="currentFolder" (OnPathChange)="goToPath($event)"></app-nav>
 
   <div class="content container-fluid col-md-12">
 
@@ -28,50 +8,53 @@
 
     <div class="contentNav col-md-6">
 
-
-      <!--{{filelist}}-->
-
       <div class="contentNavNav">
 
-        <div class="col-md-12" *ngFor="let file of filelist">
+          <div class="col-md-12" *ngIf="fileList.length === 0">
 
-          <div *ngIf="file.type == 'folder'">
-
-            <div class="col-md-12 h4 p-0 element" (click)="goToPath(file.abspath)">
-
-                            <span>
-                                <img src="assets/svg/folder.svg" alt="" width="50px"> {{file.dirname}}
-                            </span>
-
-            </div>
+              No file
 
           </div>
 
-          <div *ngIf="file.type == 'file'" (click)="changeContent(file.abspath,file.extension)" class="h4 element">
+          <ng-container *ngIf="fileList.length !== 0">
+              <div class="col-md-12" *ngFor="let file of fileList">
 
+                  <div *ngIf="file.type == 'folder'">
 
-                        <span *ngIf="file.extension == null">
+                      <div class="col-md-12 h4 p-0 element" (click)="goToPath(file.abspath)">
 
-                            <img src="assets/svg/default.svg" alt="" width="50px"> {{file.basename}}
-
+                        <span>
+                            <img src="assets/svg/folder.svg" alt="" width="50px"> {{file.dirname | CutFileName }}
                         </span>
 
-            <span *ngIf="file.extension != null">
+                      </div>
 
-                            <img src="assets/svg/{{file.extension}}.svg" alt="" width="50px"> {{file.basename}}
+                  </div>
 
-                        </span>
+                  <div *ngIf="file.type === 'file' && isSupported(file.extension)" (click)="changeContent(file.abspath,file.extension)" class="h4 element">
 
-          </div>
+                    <span *ngIf="file.extension == null">
 
-          <hr>
+                        <img src="assets/svg/default.svg" alt="" width="50px"> {{file.basename | CutFileName }}
+
+                    </span>
+
+                      <span *ngIf="file.extension != null">
+
+                <img src="assets/svg/{{file.extension}}.svg" alt="" width="50px" > {{file.basename | CutFileName }}
+
+            </span>
+
+                      <hr>
+
+                  </div>
 
 
-        </div>
 
+              </div>
+          </ng-container>
 
       </div>
-
 
       <button class="btn btn-back btn-secondary" (click)="goToPath(currentFolder+'/..')">
         ..
@@ -81,19 +64,23 @@
 
     <div class="contentOutput col-md-6 " >
 
-        <div *ngIf="viewcontent != null">
+        <div *ngIf="fileContent != null">
 
-            <div *ngIf="contentType != 'md'"></div>
+            <div *ngIf="contentType != 'md'">
 
-            <div *ngIf="contentType == 'md'">
+                <div [innerHtml]="htmlElementViewContent" highlight-js-content=".highlight" class="highlightdiv">
+
+                </div>
 
             </div>
 
-            <div class="highlight">{{viewcontent}}</div>
+            <div *ngIf="contentType === 'md'">
+                <markdown [data]="fileContent"></markdown>
+            </div>
 
         </div>
 
-      <div class="nothingToShow" *ngIf="viewcontent === null">
+      <div class="nothingToShow" *ngIf="fileContent === null">
 
             <span>
 
@@ -107,7 +94,7 @@
 
     <div class="debugTools">
 
-      <a href="" class="btn"> Liste time : {{buildtime}} s </a>
+      <a href="" class="btn"> Liste time : {{buildTime}} s </a>
 
       <a href="" class="btn"> Content Load Time : {{loadTime}} s </a>
 
