--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 @import "assets/css/font-awesome.min.css";
 @import "assets/css/bootstrap.css";
 @import "assets/css/index.css";
-
+@import "assets/css/prism.min.css";
 @import "../node_modules/highlightjs/styles/github.css";
 
