--- a/src/app/navComponent/app-nav.component.html
+++ b/src/app/navComponent/app-nav.component.html
@@ -10,7 +10,7 @@
 
       <div class="col-10">
 
-        <input class="form-control w-100" #current [value]="currentFolder" type="text" placeholder="Enter a path">
+        <input class="form-control w-100" #current [(ngModel)]="model" [ngbTypeahead]="search" [value]="currentFolder" type="text" placeholder="Enter a path">
 
       </div>
 
