Media element: get the relative path from the absolute path

--- a/src/app/AudioFileComponent/audio.component.html
+++ b/src/app/AudioFileComponent/audio.component.html
@@ -1,3 +1,3 @@
-<audio controls height='100' width='100' src="file://{{fileAbsPath}}">
-    <!--<embed height='50' width='100' src="{{fileAbsPath}}">-->
+<audio controls height='100' width='100' [src]="relativePath" >
+
 </audio>
